# temporal

./: .arcconfig  .arclint  .codecov.yml  .cursorindexingignore  .dockerignore  .fossa.yml  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .travis.yml  .weaver.yaml  .whitesource  1-pager-TemporalFS.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  Dockerfile  Dockerfile-cli  Gopkg.toml  LICENSE  Makefile  PLAN.md  PLAN_ARCHITECTURE.md  PLAN_NEXT.md  PROPOSALS.md  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  STAMP_IMPORT.md  STARROCKS_INTEGRATION.md  UMPIRE_ABOUT.md  UMPIRE_PLAN.md  UMPIRE_SPEC.md  api-linter.yaml  buf.yaml  (+33 more)
.ai/: async-routing-propagation-plan.md
.azure-pipelines/: admin-tools-cicd.yaml  server-cicd.yaml
.buildkite/: Dockerfile  README.md  docker-compose-es6.yml  docker-compose-local.yml  docker-compose.yml  pipeline.yml
.claude/: settings.local.json
.docker/: .gitignore  Makefile  README.md  admin-tools.Dockerfile  docker-bake.hcl  (+2 more)
chasm/: fx.go  (+85 more)
python-workflows/: .gitignore  pyproject.toml
python-workflows/examples/: posttrain_pipeline.py
python-workflows/src/temporal_pipeline/: __init__.py  activities.py  artifacts.py  models.py  repair.py  stage_workflow.py  stages.py  test_models.py  test_pipeline.py  test_stage_workflow.py  worker.py
python-workflows/src/temporal_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-workflows/src/temporal_pipeline/adapters/: __init__.py  base.py  megatron.py  torchtitan.py  verl.py  vllm_omni.py
(+8965 files in other folders)
